Mozzi sound synthesis library for Arduino

NEWS
get the latest version from https://sensorium.github.io/Mozzi/

release v1.1.0
- new synth classes (and examples) by Tom Combriat @tomcombriat:
	- Wavefolder
	- MetaOscil
	- MultiResonantFilter


release v1.1.0rc1 (not actually "released", just the Github code around 2019 onwards.)
- Initial RP2040 port added by Thomas Friedrichsmeier
	Hardware specific notes are on the Mozzi main web page.
- Initial Teensy 4.X port added by Tom Combriat
- Code reorganised to split most hardware specific code into dedicated files
- STEREO_HACK is deprecated in favor of AUDIO_CHANNELS
- updateAudio() should be slightly rewritten for portability across different configurations and boards
	- refer to the MonoOutput() and StereoOutput() classes for more detail
- EXTERNAL_AUDIO_OUPUT allows to integrate external DACs, easily
- STM32(duino) and ESP8266 ports have been added by Thomas Friedrichsmeier, ESP32 port by Dieter Vandoren and Thomas Friedrichsmeier.
	Thomas has provided hardware specific notes on the Mozzi main web page.
- CONTROL_RATE no longer has to be a power of 2,
	and Mozzi no longer takes over Timer 0 for control interrupts.
	Thanks to Thomas Friedrichsmeier for this innovation.
- Other changes to MozziGuts.cpp, .h,
	- pauseMozzi() and unPauseMozzi() are obsolete.  Added stopMozzi().
		Use startMozzi() from now on instead of unPauseMozzi().
	- Removed backupMozziTimer functions, not required anymore.
- Removed examples>02.Control>Pause, added Stop_Start.
- Fixed errors in ADSR examples


release v1.0.4
- EventDelay.h and Metronome.h moved stop() from Metronome to EventDelay, and Metronome's ready() to EventTimer.
	This allows EventTimer to be stopped, and Metronome inherits from there.
- globally removed "defined(TEENSYDUINO)  || defined(TEENSYDUINO" typo, replaced with "defined(TEENSYDUINO)-
- MozziGuts.cpp changed line 277 to
	adc->setConversionSpeed(ADC_CONVERSION_SPEED::MED_SPEED); // could be HIGH_SPEED, noisier